--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,12 +20,9 @@ jobs:
       - checkout
 
       - run:
-          name: Install capybara-webkit
+          name: Install System Dependencies
 
-          command: |
-            apt-get update
-            apt-get install -y software-properties-common
-            apt install -y gcc g++ make qt5-default libqt5webkit5-dev ruby-dev zlib1g-dev
+          command: sudo apt-get install qt5-default libqt5webkit5-dev gstreamer1.0-plugins-base gstreamer1.0-tools gstreamer1.0-x
 
       # Download and cache dependencies
       - restore_cache:
