--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,9 @@ jobs:
     steps:
       - checkout
 
+      - run: apt-get update
       - run:
           name: Install System Dependencies
-
           command: sudo apt-get install qt5-default libqt5webkit5-dev gstreamer1.0-plugins-base gstreamer1.0-tools gstreamer1.0-x
 
       # Download and cache dependencies
