--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
     docker:
       # specify the version you desire here
        - image: circleci/ruby:2.4.1-node-browsers
+       - image: circleci/postgres:9.6-alpine
+         environment:
+          POSTGRES_USER: postgres
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -35,7 +38,12 @@ jobs:
           name: install dependencies
           command: |
             bundle install --jobs=4 --retry=3 --path vendor/bundle
-
+      - run:
+          name: Installing Dependencies
+          command: |
+            yarn install
+            sudo apt-get install postgresql-client
+            
       - save_cache:
           paths:
             - ./vendor/bundle
