--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
     steps:
       - checkout
 
-      - run: sudo apt-get update && apt-get install -y build-essential postgresql libpq-dev
+      - run: sudo apt-get update && sudo apt-get install -y build-essential postgresql libpq-dev
       - run:
           name: Install System Dependencies
           command: sudo apt-get install qt5-default libqt5webkit5-dev gstreamer1.0-plugins-base gstreamer1.0-tools gstreamer1.0-x
