--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,14 @@ jobs:
             yarn install
             sudo apt-get install postgresql-client
 
+      - run:
+          name: Set up DB
+          command: |
+            bundle exec rake db:create db:schema:load --trace
+            bundle exec rake db:migrate
+          environment:
+            DATABASE_URL: "postgres://ubuntu@localhost:5432/responders_now_test"
+
       - save_cache:
           paths:
             - ./vendor/bundle
