--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
                             --out /tmp/test-results/rspec.xml \
                             --format progress \
                             -- \
-                            "${TEST_FILES}"
+                            $TEST_FILES
 
       - store_test_results:
           path: /tmp/test-results
