--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,68 +2,16 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
-       - image: circleci/ruby:2.4.1-node-browsers
-         environment:
-         - PG_HOST=localhost
-         - PG_USER=ubuntu
-         - RAILS_ENV=test
-         - RACK_ENV=test
-       - image: circleci/postgres:9.6-alpine
-         environment:
-         - POSTGRES_USER=ubuntu
-         - POSTGRES_DB=responders_now_test
+      - image: ruby:2.4.1
+      - image: postgres:9.5.1
+        environment:
+          POSTGRES_USER: root
 
-    working_directory: ~/repo
-
+    working_directory: /home/ubuntu/cci-demo-rails
     steps:
       - checkout
-      - run:
-          name: Install System Dependencies
-          command: sudo apt-get update -qq && sudo apt-get install -y build-essential postgresql libpq-dev nodejs rake qt5-default libqt5webkit5-dev gstreamer1.0-plugins-base gstreamer1.0-tools gstreamer1.0-x
-      - run:
-          name: Install Ruby Dependencies
-          command: bundle install --jobs=4 --retry=3 --path vendor/bundle
-
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "Gemfile.lock" }}
-          - v1-dependencies-
-
-      - run:
-          name: Installing Node and PG Dependencies
-          command: |
-            yarn install
-            sudo apt-get install postgresql-client
-
-      - run:
-          name: Set up DB
-          command: |
-            bundle exec rake db:create db:schema:load --trace
-            bundle exec rake db:migrate
-          environment:
-            DATABASE_URL: "postgres://ubuntu@localhost:5432/responders_now_test"
-
-      - save_cache:
-          paths:
-            - ./vendor/bundle
-          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-
-      - run:
-          name: run tests
-          command: |
-            mkdir /tmp/test-results
-            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
-
-            bundle exec rspec --format progress \
-                            --format RspecJunitFormatter \
-                            --out /tmp/test-results/rspec.xml \
-                            --format progress \
-                            -- \
-                            $TEST_FILES
-
-      - store_test_results:
-          path: /tmp/test-results
-      - store_artifacts:
-          path: /tmp/test-results
-          destination: test-results
+      - run: apt-get update -qq && apt-get install -y build-essential nodejs
+      - run: bundle install
+      - run: bundle exec rake db:create db:schema:load --trace
+      - run: bundle exec rake db:migrate
+      - run: bundle exec rake test
