--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,16 @@ jobs:
         environment:
           POSTGRES_USER: root
 
-    working_directory: /home/ubuntu/cci-demo-rails
+    working_directory: /home/ubuntu/respondersnow
     steps:
       - checkout
+      - run:
+          name: Install capybara-webkit
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y software-properties-common
+            sudo apt-get install -y gcc g++ make qt5-default libqt5webkit5-dev ruby-dev zlib1g-dev
+
       - run: apt-get update -qq && apt-get install -y build-essential nodejs
       - run: bundle install
       - run: bundle exec rake db:create db:schema:load --trace
