--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,9 +13,9 @@ jobs:
       - run:
           name: Install capybara-webkit
           command: |
-            sudo apt-get update
-            sudo apt-get install -y software-properties-common
-            sudo apt-get install -y gcc g++ make qt5-default libqt5webkit5-dev ruby-dev zlib1g-dev
+            apt-get update
+            apt-get install -y software-properties-common
+            apt-get install -y gcc g++ make qt5-default libqt5webkit5-dev ruby-dev zlib1g-dev
 
       - run: apt-get update -qq && apt-get install -y build-essential nodejs
       - run: bundle install
