--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,45 @@
+---
 version: 2
 jobs:
   build:
+    working_directory: ~/respondersnow
     docker:
-      - image: ruby:2.4.1
-      - image: postgres:9.5.1
+      - image: circleci/ruby:2.4.1
         environment:
-          POSTGRES_USER: root
-
-    working_directory: /home/ubuntu/respondersnow
+          PGHOST: localhost
+          PGUSER: respondersnow
+          RAILS_ENV: test
+      - image: postgres:9.5
+        environment:
+          POSTGRES_USER: respondersnow
+          POSTGRES_DB: respondersnow_test
+          POSTGRES_PASSWORD: ""
     steps:
       - checkout
-      - run:
-          name: Install capybara-webkit
-          command: |
-            apt-get update
-            apt-get install -y software-properties-common
-            apt-get install -y gcc g++ make qt5-default libqt5webkit5-dev ruby-dev zlib1g-dev
 
-      - run: apt-get update -qq && apt-get install -y build-essential nodejs
-      - run: bundle install
-      - run: bundle exec rake db:create db:schema:load --trace
-      - run: bundle exec rake db:migrate
-      - run: bundle exec rake test
+      # Restore Cached Dependencies
+      - type: cache-restore
+        name: Restore bundle cache
+        key: respondersnow-{{ checksum "Gemfile.lock" }}
+
+      # Bundle install dependencies
+      - run: bundle install --path vendor/bundle
+
+      # Cache Dependencies
+      - type: cache-save
+        name: Store bundle cache
+        key: respondersnow-{{ checksum "Gemfile.lock" }}
+        paths:
+          - vendor/bundle
+
+      # Wait for DB
+      - run: dockerize -wait tcp://localhost:5432 -timeout 1m
+
+      # Setup the environment
+      - run: cp .sample.env .env
+
+      # Setup the database
+      - run: bundle exec rake db:setup
+
+      # Run the tests
+      - run: bundle exec rake
