--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,11 @@ jobs:
 
       # install webkit
       - run:
+          name: Update System
+          command: sudo apt-get update -y
+      - run:
           name: Install System Dependencies
-          command: sudo apt-get install qt5-default libqt5webkit5-dev gstreamer1.0-plugins-base gstreamer1.0-tools gstreamer1.0-x
+          command: sudo apt-get install qt5-default libqt5webkit5-dev
 
       # Restore Cached Dependencies
       - type: cache-restore
