--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
 
       - run:
           name: Decrypt Enviroment Variables
-          command: openssl aes-256-cbc -d -a -in ~/repo/.env-cipher -out .env -k $ENV_KEY
+          command: openssl enc -in ~/repo/.env-cipher -out ~/repo/.env -d -aes256 -k $ENV_KEY
 
       - restore_cache:
           name: Restore Bundled Gems
