--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ log2/
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
