--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
-    "@rails/webpacker": "3.2.0",
-    "coffeescript": "1.12.7"
+    "@rails/webpacker": "3.5",
+    "babel-preset-react": "6.24.1",
+    "coffeescript": "1.12.7",
+    "prop-types": "15.6.2",
+    "react": "16.5.0",
+    "react-dom": "16.5.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.9.7"
+    "webpack-dev-server": "2.11.2"
   }
 }
