--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,8 +9,8 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  access_key_id: <%= ENV['AWS_SECRET_KEY'] %>
-  secret_access_key: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['AWS_SECRET_KEY'] %>
   region: us-east-1
   bucket: "resnow-files"
 
