[issue-30][ RJ ] added some flag css things

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@rails/webpacker": "3.5",
     "babel-preset-react": "6.24.1",
     "coffeescript": "1.12.7",
+    "flag-icon-css": "3.2.1",
     "prop-types": "15.6.2",
     "react": "16.5.0",
     "react-dom": "16.5.0"
