--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "apollo-boost": "0.1.22",
+    "apollo-client": "2.4.7",
     "axios": "0.18.0",
     "babel-preset-react": "6.24.1",
     "coffeescript": "1.12.7",
@@ -11,7 +12,9 @@
     "graphql-tag": "2.10.0",
     "prop-types": "15.6.2",
     "react": "16.6.3",
-    "react-dom": "16.6.3"
+    "react-apollo": "2.3.2",
+    "react-dom": "16.6.3",
+    "react-router": "4.3.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
