--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "prop-types": "15.6.2",
     "react": "16.6.3",
     "react-apollo": "2.3.2",
+    "react-bootstrap": "0.32.4",
     "react-dom": "16.6.3",
     "react-moment": "0.8.4",
+    "react-places-autocomplete": "7.2.0",
     "react-router": "4.3.1",
+    "react-select": "2.1.2",
     "react-spinkit": "3.0.0",
     "react-timeago": "4.1.9",
     "reactstrap": "6.5.0"
