--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
               --format progress
 
       - store_test_results:
-          path: ~/repo/spec
+          path: ~/tmp/test-results
       - store_artifacts:
           path: ~/repo/spec/rspec.xml
 
