--- a/package.json
+++ b/package.json
@@ -1,12 +1,32 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.9",
+    "@fortawesome/free-solid-svg-icons": "5.6.0",
+    "@fortawesome/react-fontawesome": "0.1.3",
     "@rails/webpacker": "3.5",
+    "apollo-boost": "0.1.22",
+    "apollo-client": "2.4.7",
+    "axios": "0.18.0",
     "babel-preset-react": "6.24.1",
     "coffeescript": "1.12.7",
     "flag-icon-css": "3.2.1",
+    "google-map-react": "1.1.1",
+    "graphql": "14.0.2",
+    "graphql-tag": "2.10.0",
+    "moment": "2.22.2",
     "prop-types": "15.6.2",
-    "react": "16.5.0",
-    "react-dom": "16.5.0"
+    "react": "16.6.3",
+    "react-apollo": "2.3.2",
+    "react-bootstrap": "0.32.4",
+    "react-dom": "16.6.3",
+    "react-moment": "0.8.4",
+    "react-places-autocomplete": "7.2.0",
+    "react-router": "4.3.1",
+    "react-select": "2.1.2",
+    "react-spinkit": "3.0.0",
+    "react-timeago": "4.1.9",
+    "react-toastify": "4.5.0",
+    "reactstrap": "6.5.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
