--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "1.2.9",
-    "@fortawesome/free-solid-svg-icons": "5.6.0",
-    "@fortawesome/react-fontawesome": "0.1.3",
-    "@rails/webpacker": "3.5",
-    "apollo-boost": "0.1.22",
-    "apollo-client": "2.4.7",
-    "axios": "0.18.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.25",
+    "@fortawesome/free-solid-svg-icons": "5.11.2",
+    "@fortawesome/react-fontawesome": "0.1.7",
+    "@rails/webpacker": "4.2.0",
+    "apollo-boost": "0.4.4",
+    "apollo-client": "2.6.4",
+    "axios": "0.19.0",
     "babel-preset-react": "6.24.1",
-    "coffeescript": "1.12.7",
-    "flag-icon-css": "3.2.1",
-    "google-map-react": "1.1.1",
-    "graphql": "14.0.2",
-    "graphql-tag": "2.10.0",
-    "moment": "2.22.2",
-    "prop-types": "15.6.2",
-    "react": "16.6.3",
-    "react-apollo": "2.3.2",
-    "react-bootstrap": "0.32.4",
-    "react-dom": "16.6.3",
-    "react-moment": "0.8.4",
-    "react-places-autocomplete": "7.2.0",
-    "react-router": "4.3.1",
-    "react-select": "2.1.2",
+    "coffeescript": "2.4.1",
+    "flag-icon-css": "3.4.5",
+    "google-map-react": "1.1.5",
+    "graphql": "14.5.8",
+    "graphql-tag": "2.10.1",
+    "moment": "2.24.0",
+    "prop-types": "15.7.2",
+    "react": "16.12.0",
+    "react-apollo": "3.1.3",
+    "react-bootstrap": "1.0.0-beta.16",
+    "react-dom": "16.12.0",
+    "react-moment": "0.9.6",
+    "react-places-autocomplete": "7.2.1",
+    "react-router": "5.1.2",
+    "react-select": "3.0.8",
     "react-spinkit": "3.0.0",
-    "react-timeago": "4.1.9",
-    "react-toastify": "4.5.0",
-    "reactstrap": "6.5.0"
+    "react-timeago": "4.4.0",
+    "react-toastify": "5.4.1",
+    "reactstrap": "8.1.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": "3.9.0"
   }
 }
