--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -3,8 +3,11 @@
 default: &default
   source_path: app/javascript
   source_entry_path: packs
+  public_root_path: public
   public_output_path: packs
   cache_path: tmp/cache/webpacker
+  check_yarn_integrity: false
+  webpack_compile_output: true
 
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
@@ -13,24 +16,45 @@ default: &default
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
 
-  extensions:
-    - .jsx
-    - .js
-    - .sass
-    - .scss
-    - .css
-    - .module.sass
-    - .module.scss
-    - .module.css
+  # Extract and emit a css file
+  extract_css: false
+
+  static_assets_extensions:
+    - .eot
+    - .gif
+    - .ico
+    - .jpeg
+    - .jpg
+    - .otf
     - .png
     - .svg
+    - .tiff
+    - .ttf
+    - .woff
+    - .woff2
+
+  extensions:
+    - .css
     - .gif
     - .jpeg
     - .jpg
+    - .js
+    - .jsx
+    - .mjs
+    - .module.css
+    - .module.sass
+    - .module.scss
+    - .png
+    - .sass
+    - .scss
+    - .svg
 
 development:
   <<: *default
   compile: true
+
+  # Verifies that correct packages and versions are installed by inspecting package.json, yarn.lock, and node_modules
+  check_yarn_integrity: true
 
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
@@ -46,10 +70,11 @@ development:
     disable_host_check: true
     use_local_ip: false
     quiet: false
+    pretty: false
     headers:
       'Access-Control-Allow-Origin': '*'
     watch_options:
-      ignored: /node_modules/
+      ignored: '**/node_modules/**'
 
 
 test:
@@ -64,6 +89,9 @@ production:
 
   # Production depends on precompilation of packs prior to booting for performance.
   compile: false
+
+  # Extract and emit a css file
+  extract_css: true
 
   # Cache manifest.json for performance
   cache_manifest: true
