--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "reactstrap": "8.1.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "5.11.2",
     "webpack-dev-server": "3.9.0"
   }
 }
