--- a/package.json
+++ b/package.json
@@ -1,35 +1,14 @@
 {
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "1.2.25",
-    "@fortawesome/free-solid-svg-icons": "5.11.2",
-    "@fortawesome/react-fontawesome": "0.1.7",
-    "@rails/webpacker": "4.2.0",
-    "apollo-boost": "0.4.4",
-    "apollo-client": "2.6.4",
-    "axios": "0.19.0",
-    "babel-preset-react": "6.24.1",
-    "coffeescript": "2.4.1",
-    "flag-icon-css": "3.4.5",
-    "google-map-react": "1.1.5",
-    "graphql": "14.5.8",
-    "graphql-tag": "2.10.1",
-    "moment": "2.24.0",
-    "prop-types": "15.7.2",
-    "react": "16.12.0",
-    "react-apollo": "3.1.3",
-    "react-bootstrap": "1.0.0-beta.16",
-    "react-dom": "16.12.0",
-    "react-moment": "0.9.6",
-    "react-places-autocomplete": "7.2.1",
-    "react-router": "5.1.2",
-    "react-select": "3.0.8",
-    "react-spinkit": "3.0.0",
-    "react-timeago": "4.4.0",
-    "react-toastify": "5.4.1",
-    "reactstrap": "8.1.1"
+    "@babel/preset-react": "^7.7.4",
+    "@rails/webpacker": "^4.2.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "5.11.2",
-    "webpack-dev-server": "3.9.0"
+    "webpack-dev-server": "^3.10.1"
   }
 }
