--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ script:
   — bundle install — jobs=3 — retry=3
   — bundle exec rake db:create
   — bundle exec rake db:migrate
-  — bundle exec rspec
+  — spring rspec
