--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: ruby
 rvm:
   - 2.6.3
+services:
+  - postgresql
+
 script:
   — bundle install — jobs=3 — retry=3
   — bundle exec rake db:create
   — bundle exec rake db:migrate
-  — spring rspec
+  — bundle exec rspec
