--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,5 @@ services:
 
 script:
   — bundle install — jobs=3 — retry=3
-  — bundle exec rake db:create
-  — bundle exec rake db:migrate
+  — bundle exec rake db:create db:setup
   — bundle exec rspec
