--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ services:
 
 cache: bundler
 
+before_install:
+  - gem install bundler
+
 script:
   — bundle install
   — bundle exec rake db:create db:setup
