--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,29 @@
+branches:
+  only:
+    - /.*/
+dist: bionic
 language: ruby
-rvm:
-  - 2.6.3
+env:
+  matrix:
+    - RAILS_ENV=test
+cache:
+  bundler: true
+addons:
+  postgresql: '9.6'
 services:
-  - postgresql
-
-cache: bundler
+  - redis-server
 before_install:
-  - gem install bundler
+  - |
+    if ! git diff --name-only $TRAVIS_COMMIT_RANGE | grep -qvE '(.md)|(.png)|(.pdf)|(.html)|^(LICENSE)|^(docs)'
+    then
+      echo "Only doc files were updated, not running the CI."
+      exit
+    fi
+before_script:
+  - bundle exec rails db:create
 script:
-  — bundle install
-  — bundle exec rails db:test:prepare
-#  - bundle exec rspec spec
+  - bundle exec rails db:schema:load
+  - bundle exec rails db:test:prepare
+  - bundle exec rspec
+  - bundle exec rubocop
+  - bundle exec brakeman --safe-methods ap
