--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ before_script:
 script:
   - bundle exec rails db:schema:load
   - bundle exec rails db:test:prepare
-  - bundle exec rspec
+  - spring rspec
   - bundle exec rubocop
   - bundle exec brakeman --safe-methods ap
