--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,10 @@ before_install:
     fi
 before_script:
   - bundle exec rails db:create
+
 script:
   - bundle exec rails db:schema:load
   - bundle exec rails db:test:prepare
   - spring rspec
-  - bundle exec rubocop
-  - bundle exec brakeman --safe-methods ap
+#  - bundle exec rubocop
+#  - bundle exec brakeman --safe-methods ap
