--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_install:
     fi
 before_script:
   - bundle exec rails db:create
+  - apt install spring ruby-spring
 
 script:
   - bundle exec rails db:schema:load
