--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,5 @@ script:
   - bundle exec rails db:schema:load
   - bundle exec rails db:test:prepare
   - bundle exec rspec
-#  - bundle exec rubocop
+  - bundle exec rubocop
 #  - bundle exec brakeman --safe-methods ap
