--- a/package.json
+++ b/package.json
@@ -1,91 +1,37 @@
 {
   "dependencies": {
-    "@babel/preset-env": "7.9.6",
-    "@babel/preset-react": "7.9.4",
-    "@fancyapps/fancybox": "^3.5.7",
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "@fortawesome/fontawesome-svg-core": "1.2.28",
-    "@fortawesome/free-solid-svg-icons": "5.13.0",
-    "@fortawesome/react-fontawesome": "0.1.9",
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.1.1",
-    "apollo-boost": "0.4.8",
-    "apollo-client": "2.6.9",
-    "axios": "0.19.2",
-    "bootstrap": "^4.4.1",
-    "chart.js": "^2.9.2",
-    "datatables": "^1.10.18",
-    "datatables.net-bs4": "^1.10.20",
-    "datatables.net-dt": "^1.10.20",
-    "datatables.net-responsive": "^2.2.3",
-    "datatables.net-responsive-bs4": "^2.2.3",
-    "dropzone": "^5.5.1",
-    "emojionearea": "^3.4.1",
-    "flag-icon-css": "3.4.6",
-    "flatpickr": "^4.6.3",
-    "google-map-react": "1.1.7",
-    "graphql": "15.0.0",
-    "graphql-tag": "2.10.3",
-    "is_js": "^0.9.0",
-    "jquery": "^3.4.1",
-    "jquery-countdown": "^2.2.0",
-    "jquery-validation": "^1.19.1",
-    "jquery.mb.ytplayer": "^3.2.10",
-    "leaflet": "^1.6.0",
-    "leaflet.markercluster": "^1.4.1",
-    "leaflet.tilelayer.colorfilter": "^1.2.5",
-    "lightbox2": "^2.11.1",
-    "lodash": "^4.17.15",
-    "lottie-web": "^5.5.10",
-    "moment": "2.25.3",
-    "onesignal-emoji-picker": "^1.0.0",
-    "owl.carousel": "^2.3.4",
-    "perfect-scrollbar": "^1.4.0",
-    "plyr": "^3.5.6",
-    "popper.js": "^1.16.0",
-    "prismjs": "^1.17.1",
-    "progressbar.js": "1.0.1",
-    "prop-types": "15.7.2",
-    "raty-js": "^2.9.0",
-    "react": "16.13.1",
-    "react-apollo": "3.1.5",
-    "react-bootstrap": "1.0.1",
-    "react-dom": "16.13.1",
-    "react-moment": "0.9.7",
+    "@babel/preset-react": "^7.9.4",
+    "@fortawesome/fontawesome-svg-core": "1.2.25",
+    "@fortawesome/free-solid-svg-icons": "5.11.2",
+    "@fortawesome/react-fontawesome": "0.1.7",
+    "@rails/webpacker": "4.2.2",
+    "apollo-boost": "0.4.4",
+    "apollo-client": "2.6.4",
+    "axios": "0.19.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-preset-react": "6.24.1",
+    "coffeescript": "2.4.1",
+    "flag-icon-css": "3.4.5",
+    "google-map-react": "1.1.5",
+    "graphql": "14.5.8",
+    "graphql-tag": "2.10.1",
+    "moment": "2.24.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-apollo": "3.1.3",
+    "react-bootstrap": "1.0.0-beta.16",
+    "react-dom": "^16.13.1",
+    "react-moment": "0.9.6",
     "react-places-autocomplete": "7.2.1",
     "react-router": "5.1.2",
-    "react-select": "3.1.0",
+    "react-select": "3.0.8",
     "react-spinkit": "3.0.0",
     "react-timeago": "4.4.0",
-    "react-toastify": "6.0.0-rc.2-1",
-    "reactstrap": "8.4.1",
-    "select2": "^4.0.11",
-    "sticky-kit": "^1.1.3",
-    "stickyfilljs": "^2.0.3",
-    "tinymce": "^5.1.1",
-    "toastr": "^2.1.4",
-    "turbolinks": "^5.2.0",
-    "twitter-bootstrap-wizard": "^1.2.0",
-    "typed.js": "^2.0.11"
+    "react-toastify": "5.4.1",
+    "reactstrap": "8.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.48",
-    "@fortawesome/fontawesome-free": "5.13.0",
-    "autoprefixer": "^9.4.3",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
-    "babel-plugin-transform-strict-mode": "^6.24.1",
-    "babel-preset-env": "7.0.0-beta.3",
-    "browser-sync": "^2.24.4",
-    "del": "^3.0.0",
-    "eslint": "^5.12.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "promise": "^8.0.1",
-    "webpack-dev-server": "3.11.0"
+    "@fortawesome/fontawesome-free": "5.11.2",
+    "webpack-dev-server": "^3.11.0"
   }
 }
